Fix vertical scrollbar showing on large screens

--- a/src/components/Round/Round.css
+++ b/src/components/Round/Round.css
@@ -1,3 +1,6 @@
+.Round--container {
+    padding: 20px 0;
+}
 .Round--album-image {
     width: 200px;
     height: 200px;
